@@ -42,7 +42,7 @@ public class TestGenericUDFDateSub extends TestCase {
 
     udf.initialize(arguments);
     DeferredObject valueObj1 = new DeferredJavaObject(new Text("2009-07-20 04:17:52"));
-    DeferredObject valueObj2 = new DeferredJavaObject(new Integer("2"));
+    DeferredObject valueObj2 = new DeferredJavaObject(Integer.valueOf(2));
     DeferredObject[] args = {valueObj1, valueObj2};
     DateWritableV2 output = (DateWritableV2) udf.evaluate(args);
 
@@ -68,7 +68,7 @@ public class TestGenericUDFDateSub extends TestCase {
     udf.initialize(arguments);
     DeferredObject valueObj1 = new DeferredJavaObject(new TimestampWritableV2(
         Timestamp.valueOf(LocalDateTime.of(109, 06, 20, 4, 17, 52, 0).toString())));
-    DeferredObject valueObj2 = new DeferredJavaObject(new Integer("3"));
+    DeferredObject valueObj2 = new DeferredJavaObject(Integer.valueOf(3));
     DeferredObject[] args = {valueObj1, valueObj2};
     DateWritableV2 output = (DateWritableV2) udf.evaluate(args);
 
@@ -94,7 +94,7 @@ public class TestGenericUDFDateSub extends TestCase {
 
     udf.initialize(arguments);
     DeferredObject valueObj1 = new DeferredJavaObject(new DateWritableV2(Date.of(109, 06, 20)));
-    DeferredObject valueObj2 = new DeferredJavaObject(new Integer("4"));
+    DeferredObject valueObj2 = new DeferredJavaObject(Integer.valueOf(4));
     DeferredObject[] args = {valueObj1, valueObj2};
     DateWritableV2 output = (DateWritableV2) udf.evaluate(args);
 
@@ -134,7 +134,7 @@ public class TestGenericUDFDateSub extends TestCase {
 
     udf.initialize(arguments);
     DeferredObject valueObj1 = new DeferredJavaObject(new DateWritableV2(Date.of(109, 06, 20)));
-    DeferredObject valueObj2 = new DeferredJavaObject(new Short("4"));
+    DeferredObject valueObj2 = new DeferredJavaObject(Short.valueOf("4"));
     DeferredObject[] args = {valueObj1, valueObj2};
     DateWritableV2 output = (DateWritableV2) udf.evaluate(args);
 
